Fix spacing issues

--- a/src/components/AddNewBook.module.css
+++ b/src/components/AddNewBook.module.css
@@ -20,7 +20,7 @@ hr {
 }
 
 .inputs {
-  padding: 0.5em;
+  padding: 0.5em 1em;
   border: 1px solid #d3d3d3;
   border-radius: 3px;
   outline: none;
@@ -32,6 +32,7 @@ hr {
 
 .inputs:nth-child(2) {
   width: 200px;
+  margin-right: 2em;
 }
 
 .submit_btn {
